--- a/style/nav.css
+++ b/style/nav.css
@@ -2,18 +2,21 @@ nav {
   display: flex;
   justify-content: space-between; 
   align-items: center;
+  padding: 0 16px;
+  height: 56px;  
+}
+
+.estatica{
   position: sticky;
   top: 0;
   z-index: 1000; 
-  color: white;
-  padding: 0 16px;
-  height: 56px;
+  color: transparent;
 }
-
 
 .izquierda, .centro, .derecha {
   display: flex;
   align-items: center;
+  color: white;
 }
 
 
@@ -41,41 +44,42 @@ nav {
   color: white;
   width: 30px; 
   height: 30px; 
-  border-radius: 50%; 
-  border: none;
+  border-radius: 30px 30px; 
   display: flex;
   justify-content: center;
   align-items: center;
    font-size: 18px;
-  transition: background-color 0.2s ease; 
 }
 
-.boton:hover {
-  background-color: #505050;
-}
 
 .transition-iten:hover{
   background-color: #272727;
-  transition: background 0.2s;
+  transition: background-color 0.2s ;
   cursor: pointer;
 }
 
+.main{
+display: grid;
+grid-template-columns: (2 1fr);
+}
+
 .sidebar {
-  width: 30px; 
-  height: 30px;
+  width: 25px; 
+  height: 25px;
   background-color: transparent; 
   color: white;
   position: fixed;
-  top: 56px;  
+  margin-top: 50px;  
   padding: 12px;
+  font-family: Arial, sans-serif;
+  font-size: 10px;
+  align-items: center;
 }
 
 .sidebar-item {
   display: flex;
   align-items:center;
-  padding: 10px 12px;
-  font-family: Arial, sans-serif;
-  font-size: 8px;
+  padding: 10px 10px;
 }
 
 .categorias{
@@ -87,6 +91,7 @@ nav {
   padding: 5px 5px;
   border-radius: 10px 10px;
   font-size: 15px;
+  cursor: pointer;
 }
 
 .categorias-alejar{
