--- a/style/main.css
+++ b/style/main.css
@@ -8,14 +8,11 @@ background-color: black;
 }
 
 
-main {
-  display: grid;
-  grid-template-columns: 20% 80%;
-  min-height: 100vh;
-}
-
 .sidebar {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   top: 0;
   z-index: 1000;
   gap: 10px;
@@ -24,18 +21,12 @@ main {
   padding: 12px;
   font-family: Arial, sans-serif;
   font-size: 10px;
-  align-items: center;
 }
-
-
 
 .sidebar-item {
   display: flex;
   align-items:center;
-  padding: 10px 10px;
 }
-
-
 
 .categorias{
   display: flex;
@@ -48,8 +39,9 @@ main {
   border-radius: 10px 10px;
   font-size: 15px;
   cursor: pointer;
-
+  font-family: Arial, sans-serif;
 }
+
 
 
 
