--- a/style/main.css
+++ b/style/main.css
@@ -1,47 +1,61 @@
-.main{
+main{
 display: grid;
-grid-template-columns: 20% 80%;
+grid-template-columns: 7% 93%;
 }
 
 body{
 background-color: black;  
 }
 
-
 .sidebar {
   display: flex;
+  width: 20px;
+  margin-left: 10px;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  top: 0;
+  top: 10;
   z-index: 1000;
-  gap: 10px;
   background-color: transparent;
   color: white;
   padding: 12px;
   font-family: Arial, sans-serif;
   font-size: 10px;
+  gap: 25px;
 }
 
 .sidebar-item {
   display: flex;
-  align-items:center;
+  height: 20px;
+  width: 20px;
 }
 
 .categorias{
   display: flex;
-  gap: 10px;
   color: white;
   align-items: center;
-  justify-content: space-evenly;
   background-color: #272727;
-  padding: 5px 5px;
+  padding: 15px 15px;
   border-radius: 10px 10px;
   font-size: 15px;
   cursor: pointer;
   font-family: Arial, sans-serif;
+  border: none;
 }
 
+.categorias-larga{
+  display: flex;
+  height: 20px;
+  width: 20px;
+  gap: 10px;
+  width: 100%;
+  padding: 10px 10px;
+}
+
+.categorias:active{
+  cursor: pointer;
+  background-color: white;
+  color: black;
+}
 
 
 
