--- a/style/nav.css
+++ b/style/nav.css
@@ -2,7 +2,7 @@ nav {
   display: flex;
   justify-content: space-between; 
   align-items: center;
-  padding: 0 16px;
+  padding: 0 20px;
   height: 56px;  
 }
 
@@ -22,7 +22,8 @@ nav {
 
 .izquierda {
   gap: 16px; 
-  flex: 1;   
+  flex: 1; 
+  width: 15px;  
 }
 
 
@@ -30,6 +31,11 @@ nav {
   flex: 2;   
   justify-content: center; 
   gap: 10px;
+}
+
+.microfono { 
+  border-radius: 5px 5px; 
+
 }
 
 #buscador > input {
@@ -57,14 +63,15 @@ nav {
 .boton {
   background-color:  #272727; 
   color: white;
-  width: 30px; 
-  height: 30px; 
+  width: 35px; 
+  height: 35px; 
   border-radius: 30px 30px; 
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 18px;
   border: 1px solid #272727;
+  
 }
 
 .campanita{
@@ -73,12 +80,25 @@ nav {
   color: white;
 }
 
+.campanita:hover{
+  border-radius: 20px 20px;
+  padding: 5px 5px;
+}
+
+.foto{
+  border-radius: 20px 20px;
+}
 
 .transition-iten:hover{
   background-color: #3f3f3f;
   transition: background-color 0.2s ;
   cursor: pointer;
-  
+  }
+
+.transition-todo:hover{
+   background-color: #3f3f3f;
+  transition: background-color 0.2s ;
+  cursor: pointer;
 }
 
 
