--- a/style/main.css
+++ b/style/main.css
@@ -1,19 +1,16 @@
 main{
-display: grid;
-grid-template-columns: 7% 93%;
+  display: grid;
+  grid-template-columns: 7% 93%;
 }
 
 body{
-background-color: black;  
+  background-color: black;  
 }
 
 .sidebar {
   display: flex;
-  width: 20px;
-  margin-left: 10px;
   flex-direction: column;
   justify-content: center;
-  top: 10;
   z-index: 1000;
   background-color: transparent;
   color: white;
@@ -21,12 +18,12 @@ background-color: black;
   font-family: Arial, sans-serif;
   font-size: 10px;
   gap: 25px;
+  position: sticky;
+  top: 100px;
 }
 
 .sidebar-item {
   display: flex;
-  height: 20px;
-  width: 20px;
 }
 
 .categorias{
@@ -44,10 +41,7 @@ background-color: black;
 
 .categorias-larga{
   display: flex;
-  height: 20px;
-  width: 20px;
   gap: 10px;
-  width: 100%;
   padding: 10px 10px;
 }
 
